--- a/Clientes/templates/clientes_index.html
+++ b/Clientes/templates/clientes_index.html
@@ -3,12 +3,16 @@
 
 <div class="p-4">
     <div class="col d-flex justify-content-end">
-        <a href="{%url 'nuevo_cliente'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo Cliente</a> &nbsp;
+
+        <a href="{%url 'nuevo_cliente'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo Cliente</a>
+        &nbsp;
         <a href="{% url 'home' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
     </div>
-    <table class="table">
+    <table class="table table-sm table-hover">
         <div class="col-md-4 mb-3 d-flex justify-content-end">
-            <input type="text" class="form-control text-center" id="buscarCliente" placeholder="Ingrese el valor a Buscar">
+            <input type="text" class="form-control text-center" id="buscarCliente"
+                placeholder="Ingrese el valor a Buscar">
+
         </div>
         <thead>
             <tr>
@@ -35,7 +39,7 @@
                     <a href="modificar_cliente/{{cli.id}}/" class="btn btn-ligth"><i
                             class="fa-regular fa-pen-to-square"></i></a>
                     <a href="#" class="btn btn-light btn_eliminar" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        data-id="{{cli.id}}" >
+                        data-id="{{cli.id}}">
                         <i class="fa-solid fa-trash-can"></i>
                     </a>
 
@@ -50,7 +54,30 @@
         </tbody>
 
     </table>
-</div>
+    <div class="pagination">
+        <span class="step-links">
+            {% if clientes.has_previous %}
+                {% if clientes.number > 2 %}
+                    <a class="btn btn-primary" href="?page=1">&laquo; Principio</a>
+                {% endif %}
+                <a class="btn btn-primary" href="?page={{clientes.previous_page_number}}"><i class="fa-solid fa-arrow-left"></i> Anterior</a>
+            {% endif %}
+    
+            <span class="current">
+                P&aacute;gina {{clientes.number}} de {{clientes.paginator.num_pages}}.
+            </span>
+    
+            {% if clientes.has_next %}
+                <a class="btn btn-primary" href="?page={{clientes.next_page_number}}">Siguiente <i class="fa-solid fa-arrow-right"></i></a>
+                {% if clientes.number < final_page_number or not clientes.has_next %}
+                    <a class="btn btn-primary" href="?page={{ final_page_number }}">Final &raquo;</a>
+                {% endif %}
+            {% endif %}
+        </span>
+    </div>
+    
+    
+
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -64,8 +91,10 @@
                 Esta Seguro de Eliminar este Cliente?
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> <i class="fa-solid fa-ban"></i> Cancelar</button>
-                <button type="button" id="eliminar" class="btn btn-danger"><i class="fa-solid fa-eraser"></i> Eliminar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> <i class="fa-solid fa-ban"></i>
+                    Cancelar</button>
+                <button type="button" id="eliminar" class="btn btn-danger"><i class="fa-solid fa-eraser"></i>
+                    Eliminar</button>
             </div>
         </div>
     </div>
@@ -76,7 +105,7 @@
         var eliminarBtn = $('#eliminar');
         eliminarBtn.on('click', function () {
             var dataId = $('.btn_eliminar').data('id');
-            var eliminarUrl = `eliminar_cliente/`+dataId+`/`;
+            var eliminarUrl = `eliminar_cliente/` + dataId + `/`;
             window.location.href = eliminarUrl;
         });
     });
