--- a/Home/templates/home.html
+++ b/Home/templates/home.html
@@ -1,60 +1,57 @@
+{% load bootstrap4 %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title> {{titulo}} </title>
-  {% load bootstrap5 %}
+  <title>{{ titulo }}</title>
   {% bootstrap_css %}
-  {% bootstrap_javascript %}
 </head>
 
 <body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  {% bootstrap_javascript %}
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.1/dist/js/bootstrap-select.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.1/dist/css/bootstrap-select.min.css">
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"
     integrity="sha512-AA1Bzp5Q0K1KanKKmvN/4d3IRKVlv9PYgwFPvm32nPO6QS8yH1HO7LbgB1pgiOxPtfeg5zEn2ba64MUcqJx6CA=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   {% load sweetify %}
   {% sweetify %}
 
   {% include 'navbar.html' %}
 
-
   {% block content %}
-
-
-
+    <!-- Contenido de tu bloque -->
   {% endblock %}
-
-
 
   <script>
     $(document).ready(function () {
-        $('#buscarCliente').on('input', function () {
-            var textoBusqueda = $(this).val().toLowerCase();
-            $('tbody tr').each(function () {
-                var fila = $(this);
-                var contieneTexto = false;
-                fila.find('td').each(function () {
-                    var contenidoCelda = $(this).text().toLowerCase();
-                    if (contenidoCelda.includes(textoBusqueda)) {
-                        contieneTexto = true;
-                        return false; 
-                    }
-                });
-                fila.toggle(contieneTexto);
-            });
+      $('#buscarCliente').on('input', function () {
+        var textoBusqueda = $(this).val().toLowerCase();
+        $('tbody tr').each(function () {
+          var fila = $(this);
+          var contieneTexto = false;
+          fila.find('td').each(function () {
+            var contenidoCelda = $(this).text().toLowerCase();
+            if (contenidoCelda.includes(textoBusqueda)) {
+              contieneTexto = true;
+              return false;
+            }
+          });
+          fila.toggle(contieneTexto);
         });
+      });
     });
-</script>
-
-
+  </script>
 </body>
 
 </html>
