--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -18,7 +18,7 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="#"><i class="fa-solid fa-store"></i> Presupuestos</a></li>
+              <li><a class="dropdown-item" href="{% url 'presupuesto' %}"><i class="fa-solid fa-store"></i> Presupuestos</a></li>
 
             </ul>
           </li>
