--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -1,30 +1,32 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
+  <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}"><i class="fa-solid fa-shop"></i> Sistema de Gesti&oacute;n</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false"><i class="fa-solid fa-gears"></i> 
-              Operaci&oacute;nes
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="{% url 'clientes' %}"><i class="fa-solid fa-user-tie"></i> Clientes</a></li>
-              <li>
-                <hr class="dropdown-divider">
+              <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa-solid fa-gears"></i>
+                      Operaci&oacute;nes
+                  </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="{% url 'clientes' %}"><i class="fa-solid fa-user-tie"></i>
+                              Clientes</a></li>
+                      <li>
+                          <hr class="dropdown-divider">
+                      </li>
+                      <li><a class="dropdown-item" href="{% url 'presupuesto' %}"><i class="fa-solid fa-store"></i>
+                              Presupuestos</a></li>
+
+                  </ul>
               </li>
-              <li><a class="dropdown-item" href="{% url 'presupuesto' %}"><i class="fa-solid fa-store"></i> Presupuestos</a></li>
 
-            </ul>
-          </li>
-
-        </ul>
+          </ul>
 
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
