--- a/PresupuestoCliente/templates/crearPresupuesto.html
+++ b/PresupuestoCliente/templates/crearPresupuesto.html
@@ -29,7 +29,7 @@
                     <td>{{presupuesto.total_presupuesto}}</td>
                     <td><button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button>
                         &nbsp;
-                        <a href="{% url 'home' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i>
+                        <a href="{% url 'presupuesto' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i>
                             Regresar</a>
                     </td>
                 </tr>
