--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -17,6 +17,9 @@
                       <li><a class="dropdown-item" href="{% url 'clientes' %}"><i class="fa-solid fa-user-tie"></i>
                               Clientes</a></li>
                       <li>
+                        <li><a class="dropdown-item" href="{% url 'productos' %}"><i class="fa-solid fa-user-tie"></i>
+                            Productos</a></li>
+                    <li>
                           <hr class="dropdown-divider">
                       </li>
                       <li><a class="dropdown-item" href="{% url 'presupuesto' %}"><i class="fa-solid fa-store"></i>
