--- a/Productos/templates/Productos.html
+++ b/Productos/templates/Productos.html
@@ -1,16 +1,30 @@
 {% extends 'home.html' %}
 {% block content %}
+<div class="card pr-2 my-2 mr-3 ml-3 mb-2">
+    <div class="card-body pr-2 pl-3 py-1">
+        <div class="row align-items-center">
+            <div class="col">
+                <h4 class="m-0 my-2">{{ title }}</h4>
+            </div>
 
-<div class="col d-flex p-2 justify-content-end">
+            <div class="col d-flex p-2 justify-content-end">
+                <input type="text" class="form-control mr-2 w-50 text-center" id="buscarCliente"
+                placeholder="Ingrese el valor a Buscar">
 
-    <a href="{%url 'nuevo_producto'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo Producto</a>
-    &nbsp;
-    <a href="{% url 'home' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
+                <a href="{%url 'nuevo_producto'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo Producto</a>
+                &nbsp;
+                <a href="{% url 'home' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
+            </div>
+           
+
+        </div>
+    </div>
 </div>
 
 
-<div class="p-2 mr-2 ml-2 mb-2">
-    <h4>Listado de Productos</h4>
+
+
+<div class=" pr-2 my-2 mr-3  pl-3 ml-3 mb-2">
     <table class="table table-sm table-bordered">
         <thead class="table-dark">
             <tr>
