--- a/Productos/templates/nuevo_producto.html
+++ b/Productos/templates/nuevo_producto.html
@@ -3,99 +3,60 @@
 
 <form method="post">
     {% csrf_token %}
-    <div class="container p-2">
-        <div class="col  d-flex justify-content-end">
-            <button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button> &nbsp;
-            <a href="{% url 'productos' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Descripci&oacute;n</label>
-
+    <div class="card pr-2 my-2 mr-3 ml-3 mb-2">
+        <div class="card-body pr-2  py-1">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h4 class="m-0 my-2 ">{{ title }}</h4>
+                </div>
+    
+                <div class="col d-flex p-2 justify-content-end">
+                    <button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button> &nbsp;
+                    <a href="{% url 'productos' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
+                </div>
+               
+    
             </div>
-            <div class="col-4">
-                {{form.descripcion}}
-            </div>
-            <div class="col-2">
-                <label for="">Cod. Barra</label>
-
-            </div>
-            <div class="col-4">
-                {{form.codigo_barra}}
-            </div>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Cod. Remitido</label>
-
-            </div>
-            <div class="col-4">
-                {{form.codigo_remitido}}
-            </div>
-            <div class="col-2">
-                <label for="">Precio Costo</label>
-
-            </div>
-            <div class="col-4">
-                {{form.precio_costo}}
-            </div>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Precio Venta</label>
-
-            </div>
-            <div class="col-4">
-                {{form.precio_venta}}
-            </div>
-            <div class="col-2">
-                <label for="">Precio Mayorista</label>
-
-            </div>
-            <div class="col-4">
-                {{form.precio_mayorista}}
-            </div>
-           
-            
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Existencia</label>
-
-            </div>
-            <div class="col-4">
-                {{form.existencia}}
-            </div>
-            
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Impuesto</label>
-
-            </div>
-            <div class="col-4">
-                {{form.impuesto}}
-            </div>
-            <div class="col-2">
-                <label for="">Clasificaci&oacute;n</label>
-
-            </div>
-            <div class="col-4">
-                {{form.clasificacion}}
-            </div>
-            
-        </div>
-
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Unidad Medida</label>
-
-            </div>
-            <div class="col-4">
-                {{form.unidad_medida}}
-            </div>
-            
         </div>
     </div>
+
+    <div class=" pr-2 my-2 mr-3 pl-3 ml-3 mb-2">
+        <table class="table table-sm table-borderless">
+            <tr>
+                <th>Descripci&oacute;n</th>
+                <td> {{form.descripcion}} </td>
+                <th>C&oacute;d. Barra</th>
+                <td> {{form.codigo_barra}} </td>
+                <th>C&oacute;d. Remitido</th>
+                <td> {{form.codigo_remitido}} </td>
+            </tr>
+            <tr>
+                <th>Precio Costo</th>
+                <td> {{form.precio_costo}} </td>
+                <th>Precio Venta</th>
+                <td> {{form.precio_venta}} </td>
+                <th>Precio Mayorista</th>
+                <td> {{form.precio_mayorista}} </td>
+
+            </tr>
+            <tr>
+                <th>Existencia</th>
+                <td> {{form.existencia}} </td>
+            </tr>
+
+            <tr>
+                <th>Clasificaci&oacute;n</th>
+                <td> {{form.clasificacion}} </td>
+                <th>Impuesto</th>
+                <td> {{form.impuesto}} </td>
+                <th>Unidad de Medida</th>
+                <td> {{form.unidad_medida}} </td>
+            </tr>
+            
+        </table>
+    </div>
+
+
+   
 </form>
 {% endblock %}
