--- a/Productos/templates/Productos.html
+++ b/Productos/templates/Productos.html
@@ -8,9 +8,9 @@
             </div>
 
             <div class="col d-flex p-2 justify-content-end">
-                <form class="mr-2 w-50"  method="get">
-                    <input type="text" class="form-control   text-center" id="buscarCliente" name="filter"
-                        placeholder="Ingrese el valor a Buscar">
+                <form class="mr-2 w-50" method="get">
+                    <input type="text" class="form-control   text-center" name="filter"
+                        placeholder="Ingrese el valor a Buscar y presione la tecla Enter">
                 </form>
 
                 <a href="{%url 'nuevo_producto'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo
@@ -43,28 +43,28 @@
 
         <tbody>
             {% for prod in page_obj %}
-                <tr class="text-center">
-                    <td> {{prod.id}} </td>
-                    <td> {{prod.descripcion}} </td>
-                    <td> {{prod.precio_costo}} </td>
-                    <td> {{prod.precio_venta}} </td>
+            <tr class="text-center">
+                <td> {{prod.id}} </td>
+                <td> {{prod.descripcion}} </td>
+                <td> {{prod.precio_costo}} </td>
+                <td> {{prod.precio_venta}} </td>
 
-                    <td> {{prod.existencia}} </td>
-                    <td style="text-align: right;">
-                        <a href="" class="btn btn-ligth"><i class="fa-regular fa-pen-to-square"></i></a>
-                        <a href="#" class="btn btn-light btn_eliminar" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                            data-id="{{cli.id}}">
-                            <i class="fa-solid fa-trash-can"></i>
-                        </a>
+                <td> {{prod.existencia}} </td>
+                <td style="text-align: right;">
+                    <a href="modificar_producto/{{prod.id}}/" class="btn btn-ligth"><i class="fa-regular fa-pen-to-square"></i></a>
+                    <a href="#" class="btn btn-light btn_eliminar" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                        data-id="{{prod.id}}">
+                        <i class="fa-solid fa-trash-can"></i>
+                    </a>
 
-                    </td>
-                </tr>
+                </td>
+            </tr>
             {% endfor %}
-           
+
 
         </tbody>
     </table>
-    
+
 </div>
 
 {% include 'paginator.html' %}
@@ -79,10 +79,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Eliminar Cliente</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar Producto</h5>
             </div>
             <div class="modal-body">
-                Esta Seguro de Eliminar este Cliente?
+                Esta Seguro de Eliminar este Producto?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal"> <i
@@ -112,7 +112,7 @@
         $('#eliminar').on('click', function (e) {
             // Obtén el data-id del botón eliminar
             var dataId = $(this).data('id');
-            var eliminarUrl = `eliminar_cliente/` + dataId + `/`;
+            var eliminarUrl = `eliminar_producto/` + dataId + `/`;
             window.location.href = eliminarUrl;
         });
     });
