--- a/Clientes/templates/nuevo_cliente.html
+++ b/Clientes/templates/nuevo_cliente.html
@@ -3,81 +3,60 @@
 
 <form method="post">
     {% csrf_token %}
-    <div class="container p-2">
-        <div class="col  d-flex justify-content-end">
-            <button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button> &nbsp;
-            <a href="{% url 'clientes' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Nombre</label>
-
+    <div class="card pr-2 my-2 mr-3 ml-3 mb-2">
+        <div class="card-body pr-2  py-1">
+            <div class="row align-items-center">
+                <div class="col">
+                    <h4 class="m-0 my-2 ">{{ title }}</h4>
+                </div>
+    
+                <div class="col d-flex p-2 justify-content-end">
+                    <button class="btn btn-success "> <i class="fa-solid fa-floppy-disk"></i> Guardar</button> &nbsp;
+                    <a href="{% url 'productos' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
+                </div>
+               
+    
             </div>
-            <div class="col-4">
-                {{form.nombre}}
-            </div>
-            <div class="col-2">
-                <label for="">Apellido</label>
-
-            </div>
-            <div class="col-4">
-                {{form.apellido}}
-            </div>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Documento</label>
-
-            </div>
-            <div class="col-4">
-                {{form.documento}}
-            </div>
-            <div class="col-2">
-                <label for="">Direccion</label>
-
-            </div>
-            <div class="col-4">
-                {{form.direccion}}
-            </div>
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Correo</label>
-
-            </div>
-            <div class="col-4">
-                {{form.correo}}
-            </div>
-            <div class="col-2">
-                <label for="">Telefono</label>
-
-            </div>
-            <div class="col-4">
-                {{form.telefono}}
-            </div>
-           
-            
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Fecha de Nacimiento</label>
-
-            </div>
-            <div class="col-4">
-                {{form.fecha_nacimiento}}
-            </div>
-            
-        </div>
-        <div class="row my-2">
-            <div class="col-2">
-                <label for="">Observacion</label>
-
-            </div>
-            <div class="col-4">
-                {{form.observacion}}
-            </div>
-            
         </div>
     </div>
+
+    <div class=" pr-2 my-2 mr-3 pl-3 ml-3 mb-2">
+        <table class="table table-sm table-borderless">
+            <tr>
+                <th>Descripci&oacute;n</th>
+                <td> {{form.descripcion}} </td>
+                <th>C&oacute;d. Barra</th>
+                <td> {{form.codigo_barra}} </td>
+                <th>C&oacute;d. Remitido</th>
+                <td> {{form.codigo_remitido}} </td>
+            </tr>
+            <tr>
+                <th>Precio Costo</th>
+                <td> {{form.precio_costo}} </td>
+                <th>Precio Venta</th>
+                <td> {{form.precio_venta}} </td>
+                <th>Precio Mayorista</th>
+                <td> {{form.precio_mayorista}} </td>
+
+            </tr>
+            <tr>
+                <th>Existencia</th>
+                <td> {{form.existencia}} </td>
+            </tr>
+
+            <tr>
+                <th>Clasificaci&oacute;n</th>
+                <td> {{form.clasificacion}} </td>
+                <th>Impuesto</th>
+                <td> {{form.impuesto}} </td>
+                <th>Unidad de Medida</th>
+                <td> {{form.unidad_medida}} </td>
+            </tr>
+            
+        </table>
+    </div>
+
+
+   
 </form>
 {% endblock %}
