--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -21,7 +21,7 @@
                         <li><a class="dropdown-item" href="{% url 'productos' %}"><i class="fa-solid fa-user-tie"></i>
                                 Productos</a></li>
                         <li>
-                            <li><a class="dropdown-item" href="{% url 'clasificaciones' %}"><i class="fa-solid fa-user-tie"></i>
+                            <li><a class="dropdown-item" href=""><i class="fa-solid fa-user-tie"></i>
                                 Clasificaciones</a></li>
                         <li>
                             <hr class="dropdown-divider">
