--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -18,11 +18,15 @@
                         <li><a class="dropdown-item" href="{% url 'clientes' %}"><i class="fa-solid fa-user-tie"></i>
                                 Clientes</a></li>
                         <li>
-                        <li><a class="dropdown-item" href="{% url 'productos' %}"><i class="fa-solid fa-user-tie"></i>
-                                Productos</a></li>
+
+                        <li><a class="dropdown-item" href="{% url 'clasificaciones' %}"><i
+                                    class="fa-solid fa-note-sticky"></i> Clasificaciones</a></li>
+                        <li><a class="dropdown-item" href="{% url 'impuestos' %}"><i class="fa-solid fa-newspaper"></i> Impuestos</a></li>
                         <li>
-                            <li><a class="dropdown-item" href=""><i class="fa-solid fa-user-tie"></i>
-                                Clasificaciones</a></li>
+                        <li><a class="dropdown-item" href="{% url 'productos' %}"><i
+                                    class="fa-solid fa-basket-shopping"></i> Productos</a></li>
+                        <li>
+
                         <li>
                             <hr class="dropdown-divider">
                         </li>
