--- a/Impuestos/templates/impuestos_index.html
+++ b/Impuestos/templates/impuestos_index.html
@@ -13,8 +13,8 @@
                         placeholder="Ingrese el Nro de Documento y presione la tecla Enter">
                 </form>
 
-                <a href="{%url 'nuevo_cliente'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo
-                    Cliente</a>
+                <a href="{%url 'nuevo_impuesto'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nuevo
+                    Impuesto</a>
                 &nbsp;
                 <a href="{% url 'home' %}" class="btn btn-primary"> <i class="fa-solid fa-arrow-left"></i> Regresar</a>
             </div>
@@ -32,29 +32,24 @@
         <thead class="table-dark ">
             <tr class="text-center">
                 <th>Codigo</th>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Documento</th>
-                <th>Telefono</th>
-                <th>Correo</th>
+                <th>Descripci&oacute;n</th>
+                <th>Porcentaje</th>
+                
                 <th style="width: 8%; text-align: right;">Opciones</th>
             </tr>
         </thead>
 
         <tbody>
-            {% for cli in page_obj %}
+            {% for imp in page_obj %}
             <tr class="text-center">
-                <td> {{cli.id}} </td>
-                <td> {{cli.nombre}} </td>
-                <td> {{cli.apellido}} </td>
-                <td> {{cli.documento}} </td>
-
-                <td> {{cli.telefono}} </td>
-                <td> {{cli.correo}} </td>
+                <td> {{imp.id}} </td>
+                <td> {{imp.descripcion}} </td>
+                <td> {{imp.porcentaje}} </td>
+                
                 <td style="text-align: right;">
-                    <a href="modificar_cliente/{{cli.id}}/" class="btn btn-ligth"><i class="fa-regular fa-pen-to-square"></i></a>
+                    <a href="modificar_impuesto/{{imp.id}}/" class="btn btn-ligth"><i class="fa-regular fa-pen-to-square"></i></a>
                     <a href="#" class="btn btn-light btn_eliminar" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                        data-id="{{cli.id}}">
+                        data-id="{{imp.id}}">
                         <i class="fa-solid fa-trash-can"></i>
                     </a>
 
@@ -80,10 +75,10 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Eliminar Cliente</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Eliminar Impuesto</h5>
             </div>
             <div class="modal-body">
-                Esta Seguro de Eliminar este Cliente?
+                Esta Seguro de Eliminar este Impuesto?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary cancelar" data-bs-dismiss="modal"> <i
@@ -113,7 +108,7 @@
         $('#eliminar').on('click', function (e) {
             // Obtén el data-id del botón eliminar
             var dataId = $(this).data('id');
-            var eliminarUrl = `eliminar_cliente/` + dataId + `/`;
+            var eliminarUrl = `eliminar_impuesto/` + dataId + `/`;
             window.location.href = eliminarUrl;
         });
     });
