--- a/Clasificaciones/templates/clasificaciones_index.html
+++ b/Clasificaciones/templates/clasificaciones_index.html
@@ -10,7 +10,7 @@
             <div class="col d-flex p-2 justify-content-end">
                 <form class="mr-2 w-50" method="get">
                     <input type="text" class="form-control   text-center" name="filter"
-                        placeholder="Ingrese el Nro de Documento y presione la tecla Enter">
+                    placeholder="Ingrese el valor a Buscar y presione la tecla Enter">
                 </form>
 
                 <a href="{%url 'nueva_clasificacion'%}" class="btn btn-success"> <i class="fa-solid fa-plus"></i> Nueva
