--- a/Home/templates/navbar.html
+++ b/Home/templates/navbar.html
@@ -21,7 +21,10 @@
 
                         <li><a class="dropdown-item" href="{% url 'clasificaciones' %}"><i
                                     class="fa-solid fa-note-sticky"></i> Clasificaciones</a></li>
-                        <li><a class="dropdown-item" href="{% url 'impuestos' %}"><i class="fa-solid fa-newspaper"></i> Impuestos</a></li>
+                        <li><a class="dropdown-item" href="{% url 'unidades' %}"><i
+                                    class="fa-solid fa-note-sticky"></i> Unidad de Medida</a></li>
+                        <li><a class="dropdown-item" href="{% url 'impuestos' %}"><i class="fa-solid fa-newspaper"></i>
+                                Impuestos</a></li>
                         <li>
                         <li><a class="dropdown-item" href="{% url 'productos' %}"><i
                                     class="fa-solid fa-basket-shopping"></i> Productos</a></li>
